# Multi-Agent-AI-System

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  BASH_SETUP.md  DEPLOYMENT.md  FIREBASE_MIGRATION_SUMMARY.md  FIREBASE_SETUP.md  GEMINI_INTEGRATION.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  REDIS_POSTGRES_SETUP.md  SETUP_GUIDE.md  debug_detailed.py  debug_token.py  docker-compose.yml  pyproject.toml  run.sh  setup_local_dev.py  test_firebase_init.py  test_gemini.py  test_writer_agent.py
.github/workflows/: ci.yml
ai_agent_system/src/: main.py
ai_agent_system/src/agents/: __init__.py  orchestrator.py  planner.py  specialized.py  weather.py
ai_agent_system/src/agents/base/: README.md  __init__.py  agent.py  memory.py  tool.py
ai_agent_system/src/agents/tools/: __init__.py  specialized_tools.py
ai_agent_system/src/api/: __init__.py
ai_agent_system/src/api/endpoints/: __init__.py  agent_endpoints.py  auth_endpoints.py  location_endpoints.py  test_endpoints.py  tool_endpoints.py  workflow_endpoints.py
ai_agent_system/src/api/middleware/: README.md  __init__.py  auth.py  auth_middleware.py  logging.py  rate_limiter.py
ai_agent_system/src/config/: __init__.py  logging_config.py  settings.py
ai_agent_system/src/tests/integration/: test_api.py  test_end_to_end.py
ai_agent_system/src/tests/manual/: test_gemini.py
ai_agent_system/src/tests/unit/: test_agents.py  test_auth.py  test_specialized_agents.py  test_specialized_tools.py  test_tools.py  test_workflows.py
ai_agent_system/src/utils/: auth.py  clients.py  exceptions.py  firebase_auth.py  firebase_cache.py  health.py  metrics.py  tool_registry.py  tracing.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: api.md  architecture.md  deployment.md
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agent-showcase.tsx  agents-list.tsx  cta-section.tsx  features-grid.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  live-demo-section.tsx  navbar.tsx  orchestrator-card.tsx  particle-background.tsx  planner-card.tsx  query-provider.tsx  weather-card.tsx  writer-card.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-agents.ts
frontend/src/types/: api.ts
scripts/: validate.py
(+21 files in other folders)
